--- a/course-1/payment.html
+++ b/course-1/payment.html
@@ -98,7 +98,7 @@
 
         // Razorpay checkout options
         const options = {
-          key: 'YOUR_RAZORPAY_KEY_ID', // Replace with your Razorpay key_id
+          key: 'rzp_test_lesdDWX9Rfaoi4', // Replace with your Razorpay key_id
           amount: 50000, // Amount in paise
           currency: 'INR',
           name: 'SyncSkill',
