--- a/course-1/base-course-1.html
+++ b/course-1/base-course-1.html
@@ -930,12 +930,13 @@ function logout() {
         <img src="https://d3kl8zsmmx4oop.cloudfront.net/SEO_4be34a6ed1_07b92bff39.webp" alt="SEO Course" class="seo-image-box__image">
         <div class="section-image-left__buttons-desktop">
           <div class="seo-image-box__buttons">
-            <button class="seo-btn seo-btn--apply" onclick="window.location.href = './payment.html'">
-              <svg class="btn-icon" viewBox="0 0 24 24" fill="none">
-                <path stroke-linecap="round" stroke-linejoin="round" d="M5 12h14M12 5l7 7-7 7"/>
-              </svg>
-              <span>Apply Now</span>
-            </button>
+            <button class="seo-btn seo-btn--apply" onclick="startRazorpayPayment()">
+  <svg class="btn-icon" viewBox="0 0 24 24" fill="none">
+    <path stroke-linecap="round" stroke-linejoin="round" d="M5 12h14M12 5l7 7-7 7"/>
+  </svg>
+  <span>Apply Now</span>
+</button>
+
             <button class="seo-btn seo-btn--download">
               <svg class="btn-icon" viewBox="0 0 24 24" fill="none">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M12 3v12m0 0l-3-3m3 3l3-3M5 21h14a2 2 0 002-2V5a2 2 0 00-2-2H5a2 2 0 00-2 2v14a2 2 0 002 2z"/>
@@ -1057,139 +1058,78 @@ function logout() {
 
 
    <script type="module">
-  import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js';
-  import { getAuth, onAuthStateChanged, signOut } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
+import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js';
+import { getAuth, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
+import { getFirestore, doc, setDoc, getDoc } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-firestore.js';
 
-  // Your Firebase config
-  const firebaseConfig = {
-    apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
-    authDomain: "syncskilll.firebaseapp.com",
-    projectId: "syncskilll",
-    storageBucket: "syncskilll.firebasestorage.app",
-    messagingSenderId: "203322315096",
-    appId: "1:203322315096:web:958fc7d94806ef9a98552d",
-    measurementId: "G-JWWWM2ZQSK"
-  };
+// Firebase config
+const firebaseConfig = {
+  apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
+  authDomain: "syncskilll.firebaseapp.com",
+  projectId: "syncskilll",
+  storageBucket: "syncskilll.firebasestorage.app",
+  messagingSenderId: "203322315096",
+  appId: "1:203322315096:web:958fc7d94806ef9a98552d",
+  measurementId: "G-JWWWM2ZQSK"
+};
 
-  // Initialize Firebase
-  const app = initializeApp(firebaseConfig);
-  const auth = getAuth(app);
+const app = initializeApp(firebaseConfig);
+const auth = getAuth(app);
+const db = getFirestore(app);
 
-  // DOM elements
-  const elements = {
-    userAvatar: document.getElementById('userAvatar'),
-    mobileUserAvatar: document.getElementById('mobileUserAvatar'),
-    userName: document.getElementById('userName'),
-    dropdownAvatar: document.getElementById('dropdownAvatar'),
-    dropdownName: document.getElementById('dropdownName'),
-    dropdownEmail: document.getElementById('dropdownEmail'),
-    mobileUserName: document.getElementById('mobileUserName'),
-    mobileUserEmail: document.getElementById('mobileUserEmail'),
-    welcomeUserSpan: document.getElementById('user')
-  };
+let currentUser = null;
 
-  // Clear sensitive data from DOM
-  const clearUserProfile = () => {
-    const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
-    try {
-      if (elements.userName) elements.userName.textContent = '';
-      if (elements.dropdownName) elements.dropdownName.textContent = '';
-      if (elements.mobileUserName) elements.mobileUserName.textContent = '';
-      if (elements.dropdownEmail) elements.dropdownEmail.textContent = '';
-      if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = '';
-      if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = '';
+onAuthStateChanged(auth, user => {
+  if (user) {
+    currentUser = user;
+  } else {
+    window.location.href = '/login.html';
+  }
+});
 
-      [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
-        if (img) {
-          img.src = fallbackAvatar;
-          img.removeAttribute('srcset'); // Clear any cached image sources
-        }
-      });
-    } catch (error) {
-      console.error('Error clearing profile:', error);
+// Razorpay payment integration
+window.startRazorpayPayment = async () => {
+  if (!currentUser) {
+    alert("Please login to continue.");
+    return;
+  }
+
+  const options = {
+    key: 'rzp_test_lesdDWX9Rfaoi4', // 🔁 Replace with your Razorpay Test Key
+    amount: 50000, // Amount in paise (₹500 = 50000 paise)
+    currency: 'INR',
+    name: 'SyncSkill Academy',
+    description: 'Premium Course Access',
+    image: 'https://yourdomain.com/logo.png', // Optional: Your logo URL
+    handler: async function (response) {
+      // Razorpay payment success handler
+      try {
+        const paymentDocRef = doc(db, 'payments', currentUser.uid);
+        const paymentDoc = await getDoc(paymentDocRef);
+        let paymentData = paymentDoc.exists() ? paymentDoc.data() : {};
+        paymentData.course1Paid = true;
+
+        await setDoc(paymentDocRef, paymentData, { merge: true });
+
+        alert("Payment successful! Redirecting...");
+        window.location.href = 'premium-course-1.html';
+      } catch (error) {
+        console.error("Firestore Error:", error);
+        alert("Payment done, but failed to update your course access. Contact support.");
+      }
+    },
+    prefill: {
+      name: currentUser.displayName || "Student",
+      email: currentUser.email,
+    },
+    theme: {
+      color: "#0f172a"
     }
   };
 
-  // Update user profile on the page
-  const updateUserProfile = (user) => {
-    if (!user) {
-      clearUserProfile();
-      return;
-    }
-
-    const fallbackAvatar = 'https://cdn-icons-png.flaticon.com/512/3135/3135715.png';
-    const displayName = user.displayName || user.email?.split('@')[0] || 'User';
-    const email = user.email || 'No email provided';
-    const photoURL = user.photoURL || fallbackAvatar;
-
-    try {
-      if (elements.userName) elements.userName.textContent = displayName;
-      if (elements.dropdownName) elements.dropdownName.textContent = displayName;
-      if (elements.mobileUserName) elements.mobileUserName.textContent = displayName;
-      if (elements.dropdownEmail) elements.dropdownEmail.textContent = email;
-      if (elements.mobileUserEmail) elements.mobileUserEmail.textContent = email;
-      if (elements.welcomeUserSpan) elements.welcomeUserSpan.textContent = displayName;
-
-      [elements.userAvatar, elements.dropdownAvatar, elements.mobileUserAvatar].forEach(img => {
-        if (img) {
-          img.src = photoURL;
-          img.onerror = () => img.src = fallbackAvatar;
-        }
-      });
-    } catch (error) {
-      console.error('Profile update error:', error);
-    }
-  };
-
-  // Auth state handling
-  const handleAuthState = (user) => {
-    if (!user) {
-      clearUserProfile(); // Clear DOM data immediately
-      window.location.href = '/login.html'; // Redirect to login
-      return;
-    }
-    updateUserProfile(user); // Update user profile if logged in
-  };
-
-  // Watch for auth state changes
-  onAuthStateChanged(auth, handleAuthState);
-
-  // Prevent back/forward cache (bfcache) from restoring sensitive data
-  window.addEventListener('unload', () => {
-    clearUserProfile(); // Clear DOM data on page unload
-  });
-
-  // Logout function
-  window.logout = async () => {
-    try {
-      await signOut(auth);
-      clearUserProfile(); // Clear DOM data before redirect
-      sessionStorage.clear(); // Clear session storage
-      localStorage.removeItem('userData'); // Clear specific localStorage keys if used
-      window.location.href = '/index.html'; // Redirect to login
-    } catch (error) {
-      console.error('Logout error:', error);
-      alert('Error during logout. Please try again.');
-    }
-  };
-
-  // Optional: Auto logout after inactivity (1 hour)
-  let inactivityTimer;
-  const resetSessionTimer = () => {
-    clearTimeout(inactivityTimer);
-    inactivityTimer = setTimeout(() => logout(), 3600000); // 1 hour
-  };
-  ['mousemove', 'keydown', 'scroll', 'touchstart'].forEach(event => {
-    window.addEventListener(event, resetSessionTimer);
-  });
-  resetSessionTimer();
-
-  // Prevent browser back button from showing cached page
-  window.addEventListener('pageshow', (event) => {
-    if (event.persisted || window.performance?.navigation?.type === 2) {
-      // Page was restored from bfcache or back navigation
-      auth.currentUser ? updateUserProfile(auth.currentUser) : handleAuthState(null);
-    }
-  });
+  const rzp = new Razorpay(options);
+  rzp.open();
+};
 </script>
+
 </html>
