--- a/course-1/base-course-1.html
+++ b/course-1/base-course-1.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8" />
   <title>Base Course 1 - Free</title>
 
+<script src="https://checkout.razorpay.com/v1/checkout.js"></script>
 
 
 
