--- a/course-1/base-course-1.html
+++ b/course-1/base-course-1.html
@@ -981,7 +981,7 @@ function logout() {
         </div>
         <div class="section-image-left__buttons-mobile">
           <div class="seo-image-box__buttons">
-            <button class="seo-btn seo-btn--apply" onclick="window.location.href = './payment.html'">
+            <button class="seo-btn seo-btn--apply" onclick="startRazorpayPayment()">
               <svg class="btn-icon" viewBox="0 0 24 24" fill="none">
                 <path stroke-linecap="round" stroke-linejoin="round" d="M5 12h14M12 5l7 7-7 7"/>
               </svg>
