--- a/course-1/premium-course-1.html
+++ b/course-1/premium-course-1.html
@@ -2077,6 +2077,9 @@ function logout() {
   const checkPaymentAndAccess = async (user) => {
     if (!user) {
       clearUserProfile();
+
+      // Store redirect path before redirecting to login
+      sessionStorage.setItem("redirectAfterLogin", window.location.pathname);
       window.location.href = "/login.html";
       return;
     }
@@ -2089,13 +2092,13 @@ function logout() {
 
       if (!paymentSnap.exists() || !paymentSnap.data().course1Paid) {
         console.warn("User has not purchased the premium course.");
-        window.location.href = "/course-1/base-course-1.html"; // Redirect to base course
+        window.location.href = "/course-1/base-course-1.html";
       } else {
         console.log("User has access to premium course.");
       }
     } catch (error) {
       console.error("Error checking payment status:", error);
-      window.location.href = "/course-1/base-course-1.html"; // Fallback redirect
+      window.location.href = "/course-1/base-course-1.html";
     }
   };
 
@@ -2116,7 +2119,7 @@ function logout() {
       alert("Logout failed.");
     }
   };
-
 </script>
+
 </body>
 </html>
