--- a/login.html
+++ b/login.html
@@ -660,95 +660,104 @@ label {
     </div>
 
     <script type="module">
-      import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js';
-      import { getAuth, signInWithPopup, GoogleAuthProvider, signInWithEmailAndPassword, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
+  import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-app.js';
+  import { getAuth, signInWithPopup, GoogleAuthProvider, signInWithEmailAndPassword, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.7.0/firebase-auth.js';
 
-      const firebaseConfig = {
-        apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
-        authDomain: "syncskilll.firebaseapp.com",
-        projectId: "syncskilll",
-        storageBucket: "syncskilll.firebasestorage.app",
-        messagingSenderId: "203322315096",
-        appId: "1:203322315096:web:958fc7d94806ef9a98552d",
-        measurementId: "G-JWWWM2ZQSK"
-      };
+  const firebaseConfig = {
+    apiKey: "AIzaSyBvqzYTaepJn-WvWMPSZJe26Ydkw-7MXLE",
+    authDomain: "syncskilll.firebaseapp.com",
+    projectId: "syncskilll",
+    storageBucket: "syncskilll.firebasestorage.app",
+    messagingSenderId: "203322315096",
+    appId: "1:203322315096:web:958fc7d94806ef9a98552d",
+    measurementId: "G-JWWWM2ZQSK"
+  };
 
-      const app = initializeApp(firebaseConfig);
-      const auth = getAuth(app);
-      const provider = new GoogleAuthProvider();
+  const app = initializeApp(firebaseConfig);
+  const auth = getAuth(app);
+  const provider = new GoogleAuthProvider();
 
-      // On page load, redirect if already logged in
-      onAuthStateChanged(auth, user => {
-        if (user) {
-          document.getElementById('username').textContent = user.displayName || user.email;
-          document.getElementById('success-message').style.display = 'block';
-          setTimeout(() => {
-            window.location.href = 'user.html';
-          }, 1000);
-        }
-      });
+  // Function to get redirect URL from sessionStorage or default to user.html
+  function getRedirectURL() {
+    const redirectURL = sessionStorage.getItem('redirectAfterLogin');
+    sessionStorage.removeItem('redirectAfterLogin'); // clear after reading
+    return redirectURL || 'user.html';
+  }
 
-      // Google Sign In
-      window.googleSignIn = async () => {
-        const googleButton = document.getElementById('google-signin');
-        const form = document.getElementById('login-form');
-        const overlay = document.getElementById('loading-overlay');
-        const errorMessage = document.getElementById('error-message');
+  // On page load, redirect if already logged in
+  onAuthStateChanged(auth, user => {
+    if (user) {
+      document.getElementById('username').textContent = user.displayName || user.email;
+      document.getElementById('success-message').style.display = 'block';
 
-        googleButton.classList.add('loading-button');
-        googleButton.querySelector('.spinner').style.display = 'block';
-        form.classList.add('form-disabled');
-        overlay.style.display = 'flex';
+      setTimeout(() => {
+        window.location.href = getRedirectURL();
+      }, 1000);
+    }
+  });
 
-        try {
-          await signInWithPopup(auth, provider);
-          // Success message and redirect handled by onAuthStateChanged
-        } catch (err) {
-          errorMessage.textContent = 'Google sign-in failed: ' + err.message;
-          errorMessage.style.display = 'block';
-          googleButton.classList.remove('loading-button');
-          googleButton.querySelector('.spinner').style.display = 'none';
-          form.classList.remove('form-disabled');
-          overlay.style.display = 'none';
-        }
-      };
+  // Google Sign In
+  window.googleSignIn = async () => {
+    const googleButton = document.getElementById('google-signin');
+    const form = document.getElementById('login-form');
+    const overlay = document.getElementById('loading-overlay');
+    const errorMessage = document.getElementById('error-message');
 
-      // Email/Password Sign In
-      window.emailSignIn = async (e) => {
-        e.preventDefault();
-        const loginButton = e.target.querySelector('button[type="submit"]');
-        const form = document.getElementById('login-form');
-        const overlay = document.getElementById('loading-overlay');
-        const errorMessage = document.getElementById('error-message');
-        const email = e.target.email.value.trim();
-        const password = e.target.password.value;
+    googleButton.classList.add('loading-button');
+    googleButton.querySelector('.spinner').style.display = 'block';
+    form.classList.add('form-disabled');
+    overlay.style.display = 'flex';
 
-        if (!email || !password) {
-          errorMessage.textContent = 'Please enter email and password.';
-          errorMessage.style.display = 'block';
-          return;
-        }
+    try {
+      await signInWithPopup(auth, provider);
+      // Success redirect handled by onAuthStateChanged
+    } catch (err) {
+      errorMessage.textContent = 'Google sign-in failed: ' + err.message;
+      errorMessage.style.display = 'block';
+      googleButton.classList.remove('loading-button');
+      googleButton.querySelector('.spinner').style.display = 'none';
+      form.classList.remove('form-disabled');
+      overlay.style.display = 'none';
+    }
+  };
 
-        loginButton.classList.add('loading-button');
-        loginButton.querySelector('.spinner').style.display = 'block';
-        form.classList.add('form-disabled');
-        overlay.style.display = 'flex';
+  // Email/Password Sign In
+  window.emailSignIn = async (e) => {
+    e.preventDefault();
+    const loginButton = e.target.querySelector('button[type="submit"]');
+    const form = document.getElementById('login-form');
+    const overlay = document.getElementById('loading-overlay');
+    const errorMessage = document.getElementById('error-message');
+    const email = e.target.email.value.trim();
+    const password = e.target.password.value;
 
-        try {
-          await signInWithEmailAndPassword(auth, email, password);
-          // Success message and redirect handled by onAuthStateChanged
-        } catch (err) {
-          errorMessage.textContent = 'Email sign-in failed: ' + err.message;
-          errorMessage.style.display = 'block';
-          loginButton.classList.remove('loading-button');
-          loginButton.querySelector('.spinner').style.display = 'none';
-          form.classList.remove('form-disabled');
-          overlay.style.display = 'none';
-        }
-      };
+    if (!email || !password) {
+      errorMessage.textContent = 'Please enter email and password.';
+      errorMessage.style.display = 'block';
+      return;
+    }
 
-      // Attach emailSignIn to form submission
-      document.getElementById('login-form').addEventListener('submit', window.emailSignIn);
-    </script>
+    loginButton.classList.add('loading-button');
+    loginButton.querySelector('.spinner').style.display = 'block';
+    form.classList.add('form-disabled');
+    overlay.style.display = 'flex';
+
+    try {
+      await signInWithEmailAndPassword(auth, email, password);
+      // Success redirect handled by onAuthStateChanged
+    } catch (err) {
+      errorMessage.textContent = 'Email sign-in failed: ' + err.message;
+      errorMessage.style.display = 'block';
+      loginButton.classList.remove('loading-button');
+      loginButton.querySelector('.spinner').style.display = 'none';
+      form.classList.remove('form-disabled');
+      overlay.style.display = 'none';
+    }
+  };
+
+  // Attach emailSignIn to form submission
+  document.getElementById('login-form').addEventListener('submit', window.emailSignIn);
+</script>
+
   </body>
 </html>
