--- a/index.html
+++ b/index.html
@@ -3031,7 +3031,7 @@ margin-left: 0px;
           <div class="css-1k6cs3k">
             <h5 class=
             "h5_variant aquilla-typography typography css-bshnsn">
-            Company</h5>
+            Company & Support</h5>
             <div class="css-1gygzac">
               <a class="css-wcnz4c-StyledAnchor e1hrbfz00" href=
               "/about" rel="" target="_blank">About Us</a>
@@ -3043,141 +3043,67 @@ margin-left: 0px;
             <div class="css-1gygzac">
               <a class="css-wcnz4c-StyledAnchor e1hrbfz00" href=
               "##" rel=
-              "noopener noreferrer" target="_blank">Blogs</a>
+              "noopener noreferrer" target="_blank">Contact Us</a>
             </div>
             <div class="css-1gygzac">
               <a class="css-wcnz4c-StyledAnchor e1hrbfz00" href=
-              "/privacy" rel="" target="_blank">Privacy policy</a>
+              "/privacy" rel="" target="_blank">FAQs</a>
             </div>
             <div class="css-1gygzac">
               <a class="css-wcnz4c-StyledAnchor e1hrbfz00" href=
-              "/terms" rel="" target="_blank">Terms and
-              conditions</a>
+              "/terms" rel="" target="_blank">Partnership Program/a>
             </div>
           </div>
           <div class="css-1k6cs3k">
             <h5 class=
             "h5_variant aquilla-typography typography css-bshnsn">
-            Help & support</h5>
+           Policies & Legal</h5>
             <div class="css-1gygzac">
               <a class="css-wcnz4c-StyledAnchor e1hrbfz00" href=
-              "/guidelines" rel="" target="_blank">User
-              Guidelines</a>
+              "/guidelines" rel="" target="_blank">Privacy Policy</a>
             </div>
             <div class="css-1gygzac">
               <a class="css-wcnz4c-StyledAnchor e1hrbfz00" href=
-              "/sitemap" rel="" target="_blank">Site Map</a>
+              "/sitemap" rel="" target="_blank">Terms & Conditions</a>
             </div>
             <div class="css-1gygzac">
               <a class="css-wcnz4c-StyledAnchor e1hrbfz00" href=
-              "/refund-policy" rel="" target="_blank">Refund
-              Policy</a>
+              "/refund-policy" rel="" target="_blank">Refund & Cancellation Policy</a>
             </div>
             <div class="css-1gygzac">
               <a class="css-wcnz4c-StyledAnchor e1hrbfz00" href=
-              "/takedown-policy" rel="" target="_blank">Takedown
-              Policy</a>
+              "/takedown-policy" rel="" target="_blank">User Agreements</a>
             </div>
             <div class="css-1gygzac">
               <a class="css-wcnz4c-StyledAnchor e1hrbfz00" href=
-              "/ugrc" rel="" target="_blank">Grievance
-              Redressal</a>
+              "/ugrc" rel="" target="_blank">Cookie Policy</a>
             </div>
           </div>
-          <div class="css-1k6cs3k">
+            <div class="css-1k6cs3k">
             <h5 class=
             "h5_variant aquilla-typography typography css-bshnsn">
-            Get updates </h5>
-            
-
-
+           Learning & Resources</h5>
             <div class="css-1gygzac">
-              <a class="e1upzolw1 css-g6b8m-StyledAnchor-FlexLink-LinkWithImage e1hrbfz00"
-                 href="https://play.google.com/store/apps/details?id=com.unacademy&amp;referrer=utm_source%3DFooter%26utm_medium%3DWebApp%26utm_campaign%3DFooter%26"
-                 rel="noopener noreferrer" target="_blank">
-                <span style="box-sizing:border-box; display:inline-block; overflow:hidden; width:initial; height:initial; background:none; opacity:1; border:0; margin:0; padding:0; position:relative; max-width:100%;">
-                  <span style="box-sizing:border-box; display:block; width:initial; height:initial; background:none; opacity:1; border:0; margin:0; padding:0; max-width:100%;">
-                    <img style="display:block; max-width:100%; width:initial; height:initial; background:none; opacity:1; border:0; margin:0; padding:0" 
-                         alt="" aria-hidden="true" 
-                         src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2724%27%20height=%2724%27/%3e">
-                  </span>
-                  <img alt="Educator app"
-                       src="images/Instagram.webp"
-                       decoding="async"
-                       data-nimg="intrinsic"
-                       class="e1upzolw2 css-1wndfxo-StyledNextImage-AppImage e1pacfim0"
-                       style="position:absolute; top:0; left:0; bottom:0; right:0; box-sizing:border-box; padding:0; border:none; margin:auto; display:block; width:0; height:0; min-width:100%; max-width:100%; min-height:100%; max-height:100%;">
-                  <noscript>
-                    <img alt="Educator app"
-                         src="images/Instagram.webp"
-                         decoding="async"
-                         data-nimg="intrinsic"
-                         class="e1upzolw2 css-1wndfxo-StyledNextImage-AppImage e1pacfim0"
-                         loading="lazy">
-                  </noscript>
-                </span>
-                <span>Instagram</span>
-              </a>
+              <a class="css-wcnz4c-StyledAnchor e1hrbfz00" href=
+              "/guidelines" rel="" target="_blank">Become an Instructor</a>
             </div>
             <div class="css-1gygzac">
-              <a class="e1upzolw1 css-g6b8m-StyledAnchor-FlexLink-LinkWithImage e1hrbfz00"
-                 href="https://play.google.com/store/apps/details?id=com.unacademy&amp;referrer=utm_source%3DFooter%26utm_medium%3DWebApp%26utm_campaign%3DFooter%26"
-                 rel="noopener noreferrer" target="_blank">
-                <span style="box-sizing:border-box; display:inline-block; overflow:hidden; width:initial; height:initial; background:none; opacity:1; border:0; margin:0; padding:0; position:relative; max-width:100%;">
-                  <span style="box-sizing:border-box; display:block; width:initial; height:initial; background:none; opacity:1; border:0; margin:0; padding:0; max-width:100%;">
-                    <img style="display:block; max-width:100%; width:initial; height:initial; background:none; opacity:1; border:0; margin:0; padding:0" 
-                         alt="" aria-hidden="true" 
-                         src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2724%27%20height=%2724%27/%3e">
-                  </span>
-                  <img alt="Educator app"
-                       src="images/Whatsapp.webp"
-                       decoding="async"
-                       data-nimg="intrinsic"
-                       class="e1upzolw2 css-1wndfxo-StyledNextImage-AppImage e1pacfim0"
-                       style="position:absolute; top:0; left:0; bottom:0; right:0; box-sizing:border-box; padding:0; border:none; margin:auto; display:block; width:0; height:0; min-width:100%; max-width:100%; min-height:100%; max-height:100%;">
-                  <noscript>
-                    <img alt="Educator app"
-                         src="images/Whatsapp.webp"
-                         decoding="async"
-                         data-nimg="intrinsic"
-                         class="e1upzolw2 css-1wndfxo-StyledNextImage-AppImage e1pacfim0"
-                         loading="lazy">
-                  </noscript>
-                </span>
-                <span>Whatsapp</span>
-              </a>
+              <a class="css-wcnz4c-StyledAnchor e1hrbfz00" href=
+              "/sitemap" rel="" target="_blank">Free Courses</a>
             </div>
             <div class="css-1gygzac">
-              <a class="e1upzolw1 css-g6b8m-StyledAnchor-FlexLink-LinkWithImage e1hrbfz00"
-                 href="https://play.google.com/store/apps/details?id=com.unacademy&amp;referrer=utm_source%3DFooter%26utm_medium%3DWebApp%26utm_campaign%3DFooter%26"
-                 rel="noopener noreferrer" target="_blank">
-                <span style="box-sizing:border-box; display:inline-block; overflow:hidden; width:initial; height:initial; background:none; opacity:1; border:0; margin:0; padding:0; position:relative; max-width:100%;">
-                  <span style="box-sizing:border-box; display:block; width:initial; height:initial; background:none; opacity:1; border:0; margin:0; padding:0; max-width:100%;">
-                    <!-- Placeholder SVG remains unchanged -->
-                    <img style="display:block; max-width:100%; width:initial; height:initial; background:none; opacity:1; border:0; margin:0; padding:0" 
-                         alt="" aria-hidden="true" 
-                         src="data:image/svg+xml,%3csvg%20xmlns=%27http://www.w3.org/2000/svg%27%20version=%271.1%27%20width=%2724%27%20height=%2724%27/%3e">
-                  </span>
-                  <!-- Updated image: Loads local image from images/Instagram.png -->
-                  <img alt="Educator app"
-                       src="images/Linkedin.webp"
-                       decoding="async"
-                       data-nimg="intrinsic"
-                       class="e1upzolw2 css-1wndfxo-StyledNextImage-AppImage e1pacfim0"
-                       style="position:absolute; top:0; left:0; bottom:0; right:0; box-sizing:border-box; padding:0; border:none; margin:auto; display:block; width:0; height:0; min-width:100%; max-width:100%; min-height:100%; max-height:100%;">
-                  <noscript>
-                    <img alt="Educator app"
-                         src="images/Linkedin.webp"
-                         decoding="async"
-                         data-nimg="intrinsic"
-                         class="e1upzolw2 css-1wndfxo-StyledNextImage-AppImage e1pacfim0"
-                         loading="lazy">
-                  </noscript>
-                </span>
-                <span>Linkedin</span>
-              </a>
+              <a class="css-wcnz4c-StyledAnchor e1hrbfz00" href=
+              "/refund-policy" rel="" target="_blank">Learning Resources</a>
             </div>
-          </div>
+            <div class="css-1gygzac">
+              <a class="css-wcnz4c-StyledAnchor e1hrbfz00" href=
+              "/takedown-policy" rel="" target="_blank">Social Links</a>
+            </div>
+            <div class="css-1gygzac">
+              <a class="css-wcnz4c-StyledAnchor e1hrbfz00" href=
+              "/ugrc" rel="" target="_blank">Student Success Stories</a>
+            </div>
+          </div>   
         </div>
       </div>
       <hr class="css-nf35w8">
